--- a/index.html
+++ b/index.html
@@ -17,8 +17,14 @@
 </head>
 <body>
   <div class="calculator-grid">
+    <div id="numbers">
+      <p class="number">1</p>
+      <p class="number">2</p>
+      <p class="number">3</p>
+    </div>
     <div class="top">
       <p id="calc">calc</p>
+      <p id="theme">THEME</p>
       <input type="checkbox" id="theme-toggler">
 	        <label id="theme-label" for="theme-toggler">
             <div class="balls">
